# sermon-translation

./: .env.example  .gitignore  README.md  implementation-plan.md  pyproject.toml
src/sermon_translator/: __init__.py  bible_fetcher.py  config.py  docx_handler.py  main.py  reviewer.py  translator.py
